# vnpy_evo

./: .flake8  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  install.bat  install.sh  install_linux.sh  install_macos.sh  install_osx.sh  install_windows.bat  requirements.txt  setup.cfg
examples/candle_chart/: run.py
examples/client_server/: run_client.py  run_server.py
examples/evo_trader/: run.py
examples/no_ui/: run.py
examples/simple_rpc/: test_client.py  test_server.py
examples/veighna_trader/: run.py
vnpy/trader/: constant.py  database.py  datafeed.py  engine.py  optimize.py  setting.py
vnpy/trader/ui/: mainwindow.py  qt.py  widget.py
vnpy_crypto/: __init__.py  constant.py
vnpy_crypto/event/: __init__.py
vnpy_crypto/rpc/: __init__.py
vnpy_crypto/trader/: app.py  datafeed.py  object.py  utility.py
vnpy_crypto/trader/ui/: mainwindow.py  qt.py  widget.py
vnpy_evo/: __init__.py
vnpy_evo/chart/: __init__.py
vnpy_evo/rest/: rest_client.py
vnpy_evo/trader/: constant.py  converter.py  database.py  engine.py  event.py  gateway.py  object.py  optimize.py  setting.py  utility.py
vnpy_evo/trader/ui/: mainwindow.py  monitor.py  qt.py  widget.py
vnpy_evo/websocket/: websocket_client.py
