[metadata]
name = vnpy_crypto
version = attr: vnpy_crypto.__version__
author = VeighNa Global
author_email = veighna@hotmail.com
description = Core module for using VeighNa project on crypto markets.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.github.com/veighna-global
license = MIT
license_files = LICENSE
keywords =
    quant
    quantitative
    investment
    trading
    algotrading
    crypto
    btc
classifiers =
    Development Status :: 4 - Beta
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Office/Business :: Financial :: Investment
    Programming Language :: Python :: Implementation :: CPython
    License :: OSI Approved :: MIT License
    Natural Language :: English
project_urls =
	Documentation = https://github.com/veighna-global/vnpy_crypto

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    vnpy
    PySide6-Fluent-Widgets

[options.package_data]
* = *.ico
