[metadata]
name = vnpy_evo
version = attr: vnpy_evo.__version__
author = VeighNa Global
author_email = veighna@hotmail.com
description = Core module for using VeighNa project in crypto markets.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.github.com/veighna-global
license = MIT
license_files = LICENSE
keywords =
    quant
    quantitative
    investment
    trading
    algotrading
    crypto
    btc
classifiers =
    Development Status :: 4 - Beta
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Office/Business :: Financial :: Investment
    Programming Language :: Python :: Implementation :: CPython
    License :: OSI Approved :: MIT License
    Natural Language :: English
project_urls =
	Documentation = https://github.com/veighna-global/vnpy_evo

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    numpy==1.26.4
    vnpy
    importlib_metadata
    PySide6-Fluent-Widgets
    requests>=2.32.3
    websocket-client>=1.8.0
    loguru>=0.7.2

[options.package_data]
* = *.ico
